# WASMI-On-Zephyr-RTOS

./: Cargo.toml  Makefile  README.md  i586-unknown-elfiamcu-eabi.json
host/: main.c
lib/fib/: Cargo.toml
lib/fib/src/: lib.rs
lib/hello/: Cargo.toml
lib/hello/src/: lib.rs
lib/multiply/: Cargo.toml
lib/multiply/src/: lib.rs
src/: lib.rs
zephyr_sample_app/wasmi_sample_app/: CMakeLists.txt  prj.conf
zephyr_sample_app/wasmi_sample_app/src/: main.c
