[package]
name = "WASMI-On-Zephyr-RTOS"
version = "0.1.0"
authors = ["Johnnie Birch <45402135+jlb6740@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "wasmi_zephyr"
crate-type = ["staticlib"]

[dependencies]
libc = {version = "0.2", default-features = false}
wasmi = {version = "0.4.2", default-features = false, features=["core"]}
parity-wasm = {version = "0.31", default-features = false}
wee_alloc = {version = "*", features=["static_array_backend"]}

[package.metadata.cargo-xbuild]
memcpy = true

[profile.dev]
panic = "abort"
lto = true
codegen-units = 1

[profile.release]
panic = "abort"
lto = true
codegen-units = 1